<resources>
    <string name="app_name">OrderFoods</string>

    <string name="slogan">
        No matter where you are:
        whether you are at home, or in
        the office, of on the beach, we
        will find you and we will feed you
    </string>
    <string name="login">Log In</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="social_login">Social Login</string>

    <string name="password">password</string>
    <string name="phone">phone</string>
    <string name="name">name</string>
    <string name="facebook_login">Facebook Login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu">Menu</string>
    <string name="cart">Cart</string>
    <string name="order">Order</string>
    <string name="sign_out">Sign Out</string>

</resources>
