<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_restaurant_menu"
            android:iconTint="@color/colorWhite"
            android:title="@string/menu" />

        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_shopping_cart"
            android:iconTint="@color/colorWhite"
            android:title="@string/cart" />

        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_access_time"
            android:iconTint="@color/colorWhite"
            android:title="@string/order" />

        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_exit_to_app"
            android:iconTint="@color/colorWhite"
            android:title="@string/sign_out" />


    </group>

    <item android:title="Communicate"
        android:visible="false">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
